basic layout completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             </split-area>
 
             <split-area [visible]="action.a3v" [size]="action.a3s" order="2">
-                <app-flowchart-viewer></app-flowchart-viewer>
+                <app-flowchart-viewer class="view-wrapper"></app-flowchart-viewer>
             </split-area>
 
             <split-area [visible]="action.a2v" [size]="action.a2s" order="3">
