--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -20,7 +20,7 @@
 	  </mat-tab>
 
 	  <mat-tab class="tab-container" label="Procedure">
-	  		<app-procedure-editor class="row"></app-procedure-editor>
+	  		<app-procedure-editor></app-procedure-editor>
 	  </mat-tab>
 	</mat-tab-group>
 
