--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,11 @@ body{
 	display: none !important;
 }
 
+
+.mat-tab-body-content{
+	overflow: hidden !important;
+}
+
+split-area{
+	overflow: hidden !important;
+}
