--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -7,7 +7,8 @@
 	position: relative;
 	overflow: hidden;
 
-	height: 600px;
+	height: 100%; 
+	width: 100%;
 
 	display: flex;
 	flex-direction: column;
@@ -70,10 +71,7 @@
 			background-color: transparent;
 			overflow: hidden;
 		}
-
-
 	}
-
 
 	.node-container{
 		position: relative;
@@ -232,9 +230,6 @@
 			}
 		}
 	}
-
-
-
 	
 }
 
