--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -1,121 +1,157 @@
 <div class="viewer">
-	
-	<div class="header">
-		
-		<div class="title">Procedure Editor</div>
-
-		
-	</div>
 
 	<div class="container">
-		<tree-root #tree [nodes]='_tree' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
-			  <ng-template #treeNodeTemplate let-prod let-index="index">
 
-					<!-- template for data -->
-					<div *ngIf="prod.data.name == 'Data'"> 
-						<div class='data-node-template procedure'>
-							<input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
-							(change)="updateProcedure($event, prod, 'left')">
-							=
-							<input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required
-							(change)="updateProcedure($event, prod, 'right')">
-						</div>
-					</div>
+		<split  direction="horizontal" 
+              [gutterSize]="7" 
+              [useTransition]="true">
+          
+            <split-area [visible]="true" [size]="75" order="1">
 
-					<div *ngIf="prod.data.name == 'IfElse'">
-						<div class='data-node-template procedure'>
-							If-Else
-						</div>
-					</div>
 
-					<div *ngIf="prod.data.name == 'If'">
-						<div class='data-node-template procedure'>
-						 If ( <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
-							(change)="updateProcedure($event, prod, 'left')"> )
-						</div>
-					</div>
-
-					<div *ngIf="prod.data.name == 'Else'">
-						<div class='data-node-template procedure'>
-						 Else 
-						</div>
-					</div>
-
-					<div *ngIf="prod.data.name == 'For Loop'">
-						<div class='data-node-template procedure'>
-						 for (  
-						  <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
-						 in  
-						  <input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
-						  )
-						</div>
-					</div>
-
-					<div *ngIf="prod.data.name == 'Action'">
-						<div class='data-node-template procedure'>
-							
-							<input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
-							(change)="updateProcedure($event, prod, 'left')">
-							
-							= {{prod.data.rightExpression}} ( 
-
-							<div class="param-container" 
-								*ngFor="let p of prod.data.params; let i=index">
-								
-								<input class="tree-input"
-								 placeholder={{prod.data.params[i].type}}
-								 [(ngModel)]="prod.data.params[i].value"
-								 #ctrl="ngModel" 
-								 required
-								 (ngModelChange)="updateProcedure($event, prod, 'right')">
-
-								<span *ngIf='i<prod.data.params.length-1'>,</span>
-								<!-- <input class="tree-input" [(ngModel)]="p" 
-								 placeholder="Input something here" 
-								 #ctrl="ngModel" required 
-								 (change)="updateProcedure($event, prod, 'right')"> --> 
-							</div>
-							) 
-							
-						</div>
-					</div>
-				
-				    <!-- <div class='btn-group'>
-				    					    <button (click)="deleteProcedure(prod)">Delete</button>
-				    					    <button (click)="disableProcedure(prod, $event)">Disable</button>
-				    					    <button (click)="go($event)">Copy</button>
-				    					</div> -->
-
-			  </ng-template>
-		</tree-root>
-
-		<div *ngIf='_tree==undefined || _tree.length == 0'> No procedure </div>
-
-		<div class="buttons">
-			<button *ngFor="let type of procedureTypes"
-			 (click)="addProcedure($event, type)">{{getImageForType(type)}}</button>
-		</div>
-
-		
-	</div>
-	
-
-	<div class="dialog" *ngIf="_showToolbox">
-		
-		<div class="toolbox">
-			<div class="fn_container">
-				<div class="fn_name" 
-					*ngFor="let fn of _moduleList"
-					(click)="addActionProcedure(fn); _showToolbox=false;">
-					{{ fn.module }}::{{ fn.name }}
+				<div class="btn-group">
+					<button mat-raised-button *ngFor="let type of procedureTypes"
+			 		(click)="addProcedure($event, type)">
+			 			{{getImageForType(type)}}
+			 		</button>
 				</div>
-			</div>
-		</div>
 
-		<div class="close" (click)="_showToolbox=false;">Close</div>
+    			
+    			<div class="tree">          
+					
+					<div class="default" *ngIf='_tree==undefined || _tree.length == 0'> This node has no procedure </div>
+
+
+	                <tree-root #tree [nodes]='_tree' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
+						  
+						  <ng-template #treeNodeTemplate let-prod let-index="index" class="tree-node-wrapper">
+
+								<!-- template for data -->
+								<div *ngIf="prod.data.name == 'Data'"> 
+									<div class='procedure-item'>
+										<input matInput class="tree-input" 
+										[(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'left')">
+
+										<!-- <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'left')"> -->
+										=
+										
+										<input  matInput class="tree-input" 
+										[(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'right')">
+
+										<!-- <input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'right')"> -->
+									</div>
+								</div>
+
+								<div *ngIf="prod.data.name == 'IfElse'">
+									<div class='procedure-item'>
+										If-Else
+									</div>
+								</div>
+
+								<div *ngIf="prod.data.name == 'If'">
+									<div class='procedure-item'>
+									 If ( <input matInput class="tree-input"  [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'left')"> )
+									</div>
+								</div>
+
+
+								<!-- <div *ngIf="prod.data.name == 'If'">
+									<div class='procedure-item'>
+									 If ( <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'left')"> )
+									</div>
+								</div> -->
+
+								<div *ngIf="prod.data.name == 'Else'">
+									<div class='procedure-item'>
+									 Else 
+									</div>
+								</div>
+
+								<div *ngIf="prod.data.name == 'For Loop'">
+									<div class='procedure-item'>
+									 for (  
+									  <input matInput class="tree-input"  [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
+									 in  
+									  <input matInput class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
+									  )
+									</div>
+								</div>
+
+								<!-- <div *ngIf="prod.data.name == 'For Loop'">
+									<div class='procedure-item'>
+									 for (  
+									  <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
+									 in  
+									  <input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
+									  )
+									</div>
+								</div> -->
+
+								<div *ngIf="prod.data.name == 'Action'">
+									<div class='procedure-item'>
+										
+										<input matInput class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+										(change)="updateProcedure($event, prod, 'left')">
+										
+										= {{prod.data.rightExpression}} ( 
+
+										<div class="param-container" 
+											*ngFor="let p of prod.data.params; let i=index">
+											
+											<input matInput class="tree-input" 
+											 placeholder={{prod.data.params[i].type}}
+											 [(ngModel)]="prod.data.params[i].value"
+											 #ctrl="ngModel" 
+											 required
+											 (ngModelChange)="updateProcedure($event, prod, 'right')">
+
+											<span *ngIf='i<prod.data.params.length-1'>,</span>
+											<!-- <input class="tree-input" [(ngModel)]="p" 
+											 placeholder="Input something here" 
+											 #ctrl="ngModel" required 
+											 (change)="updateProcedure($event, prod, 'right')"> --> 
+										</div>
+										) 
+										
+									</div>
+								</div>
+							
+							    <!-- <div class='btn-group'>
+							    					    <button (click)="deleteProcedure(prod)">Delete</button>
+							    					    <button (click)="disableProcedure(prod, $event)">Disable</button>
+							    					    <button (click)="go($event)">Copy</button>
+							    					</div> -->
+
+						  </ng-template>
+					</tree-root>     
+
+				</div>
+
+
+
+            </split-area>
+
+            <split-area [visible]="_showToolbox" [size]="25" order="2">
+               	
+               	<div class="toolbox">
+               		<mat-list condensed>
+					 	<mat-list-item *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn); _showToolbox=false;"> 
+					 	{{ fn.module }}::{{ fn.name }} 
+					 	</mat-list-item>
+					</mat-list>
+				</div>
+
+				<button mat-raised-button (click)="_showToolbox=false;">Close</button>
+            </split-area>
+            
+      </split>
+
 	</div>
-
-
-
 
 </div>
