--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -1,10 +1,13 @@
 <div class="viewer-container">             
 	<mat-button-toggle-group class="viewer-toggle" #group="matButtonToggleGroup">
-		<mat-button-toggle value="1">
-		  <mat-icon>3d_rotation</mat-icon>
+		<mat-button-toggle value="0">
+		  <mat-icon>description</mat-icon>
 		</mat-button-toggle>
 		<mat-button-toggle value="2">
 		  <mat-icon>code</mat-icon>
+		</mat-button-toggle>
+		<mat-button-toggle value="1">
+		  <mat-icon>3d_rotation</mat-icon>
 		</mat-button-toggle>
 		<mat-button-toggle value="3" disabled>
 		  <mat-icon>text_format</mat-icon>
@@ -14,6 +17,7 @@
 		</mat-button-toggle>
 	</mat-button-toggle-group>
 
-	<app-geometry-viewer *ngIf="group.value == 1 || group.value == undefined"></app-geometry-viewer>
+	<app-text-viewer *ngIf="group.value == 0 || group.value == undefined"></app-text-viewer>
+	<app-geometry-viewer *ngIf="group.value == 1 "></app-geometry-viewer>
 	<app-code-viewer *ngIf="group.value == 2"></app-code-viewer>
 </div>
