--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -4,130 +4,151 @@
 	    <mat-panel-title class='header'> -->
 
 <div class="viewer">
+	
 	<div class='container'>
-			
-			<!-- svg canvas to draw the edges -->
-			<svg xmlns="http://www.w3.org/2000/svg" 
-				class="graph-container" 
-				id="graph-edges" 
-				[style.zoom]="zoom">
 
-				<g *ngFor="let edge of _edges" >
-									<path 
-									  [attr.d]="edge.path" 
-									  stroke="blue"
-									  stroke-width="3" fill="none" />
-								</g>
-												
-				<!-- dragging path -->
-				<g id="temporary-edge" [class.hidden]="!_linkMode" >
-					<path 
-					[attr.d]="edgeString(mouse_pos.start, mouse_pos.current)" stroke="blue"
- 				 	stroke-width="5" fill="none" stroke-dasharray="5, 5"/>
- 					<circle id="pointC" [attr.cx]="mouse_pos.current.x" [attr.cy]="mouse_pos.current.y" r="5" />
- 				</g>
+		<split  direction="vertical" 
+              [gutterSize]="7" 
+              [useTransition]="true">
 
-			</svg>
+            <split-area [visible]="true" [size]="90" 
+            	order="1" 
+            	style="position: relative;">
 
-			<!-- div container for the nodes -->
-			<div class="graph-container" 
-				id="graph-nodes" ondragover="return false" [style.zoom]="zoom" >
-				
-				<!-- all nodes -->
-				<div class="node-container">
+                <!-- svg canvas to draw the edges -->
+				<svg xmlns="http://www.w3.org/2000/svg" 
+					class="graph-container" 
+					id="graph-edges" 
+					[style.zoom]="zoom">
 
-					<!-- one node -->
-					<div  class="node"
-							*ngFor="let node of _nodes; let node_index = index" 
-							[style.left.px]="node.position[0]" 
-							[style.top.px]="node.position[1]" >
+					<g *ngFor="let edge of _edges" >
+										<path 
+										  [attr.d]="edge.path" 
+										  stroke="blue"
+										  stroke-width="3" fill="none" />
+									</g>
+													
+					<!-- dragging path -->
+					<g id="temporary-edge" [class.hidden]="!_linkMode" >
+						<path 
+						[attr.d]="edgeString(mouse_pos.start, mouse_pos.current)" stroke="blue"
+	 				 	stroke-width="5" fill="none" stroke-dasharray="5, 5"/>
+	 					<circle id="pointC" [attr.cx]="mouse_pos.current.x" [attr.cy]="mouse_pos.current.y" r="5" />
+	 				</g>
 
-						<div class="btn-container" *ngIf="isSelected(node)" >
-							<div class="btn-group node-btns">
-								<div class="action-button" (click)="addPort(node_index, 'in')">
-									<mat-icon>input</mat-icon>
+				</svg>
+
+				<!-- div container for the nodes -->
+				<div class="graph-container" 
+					id="graph-nodes" ondragover="return false" [style.zoom]="zoom" >
+					
+					<!-- all nodes -->
+					<div class="node-container">
+
+						<!-- one node -->
+						<div  class="node"
+								*ngFor="let node of _nodes; let node_index = index" 
+								[style.left.px]="node.position[0]" 
+								[style.top.px]="node.position[1]" >
+
+							<div class="btn-container" *ngIf="isSelected(node)" >
+								<div class="btn-group node-btns">
+									<div class="action-button" (click)="addPort(node_index, 'in')">
+										<mat-icon>input</mat-icon>
+									</div>
+									<div class="action-button" (click)="addPort(node_index, 'out')">
+										<mat-icon>add_to_queue</mat-icon>
+									</div>
 								</div>
-								<div class="action-button" (click)="addPort(node_index, 'out')">
-									<mat-icon>add_to_queue</mat-icon>
+								<div class="btn-group port-btns">
+									<div class="action-button" (click)="editNode()">
+										<mat-icon>edit</mat-icon>
+									</div>
+									<div class="action-button" (click)="deleteNode(node_index)">
+										<mat-icon>delete</mat-icon>
+									</div>
 								</div>
 							</div>
-							<div class="btn-group port-btns">
-								<div class="action-button" (click)="editNode()">
-									<mat-icon>edit</mat-icon>
-								</div>
-								<div class="action-button" (click)="deleteNode(node_index)">
-									<mat-icon>delete</mat-icon>
-								</div>
-							</div>
-						</div>
 
-						<div class="node-wrapper">
-							<!--inputs-->
-							<div class="port-container input">
-								<div class="port" 
-									[class.connected]="port.isConnected()" 
-									*ngFor="let port of node.getInputs(); let pi=index"  
-									id="n{{node_index}}pi{{pi}}"
-									draggable=true
-									(dragstart)="portDragStart($event, port, [node_index, pi])" 
-									(drag)="portDragging($event, port)" 
-									(dragend)="portDragEnd($event, port)"
-									(drop)="portDrop($event, port, [node_index, pi])">
+							<div class="node-wrapper">
+								<!--inputs-->
+								<div class="port-container input">
+									<div class="port" 
+										[class.connected]="port.isConnected()" 
+										*ngFor="let port of node.getInputs(); let pi=index"  
+										id="n{{node_index}}pi{{pi}}"
+										draggable=true
+										(dragstart)="portDragStart($event, port, [node_index, pi])" 
+										(drag)="portDragging($event, port)" 
+										(dragend)="portDragEnd($event, port)"
+										(drop)="portDrop($event, port, [node_index, pi])">
+									</div>
+									<!--  -->
 								</div>
-								<!--  -->
-							</div>
+							
+								<!-- node body -->
+								<div class="node-body" 
+									[class.selected]="isSelected(node)" 
+									(click)="clickNode($event, node_index)"
+									draggable=true  
+									(dragstart)="nodeDragStart($event, node)" 
+									(drag)="nodeDragging($event, node)" 
+									(dragend)="nodeDragEnd($event, node)">
+									<div class="node-name">{{node.getName()}}</div>
+									<!-- <div class="settings" [matMenuTriggerFor]="settingsMenu">More
+									<mat-menu #settingsMenu="matMenu">
+									  <button mat-menu-item>Shut down</button>
+									  <button mat-menu-item>Restart</button>
+									  <button mat-menu-item>Hibernate</button>
+									</mat-menu> 
+									</div>-->
+								</div>
 						
-							<!-- node body -->
-							<div class="node-body" 
-								[class.selected]="isSelected(node)" 
-								(click)="clickNode($event, node_index)"
-								draggable=true  
-								(dragstart)="nodeDragStart($event, node)" 
-								(drag)="nodeDragging($event, node)" 
-								(dragend)="nodeDragEnd($event, node)">
-								<div class="node-name">{{node.getName()}}</div>
-								<!-- <div class="settings" [matMenuTriggerFor]="settingsMenu">More
-								<mat-menu #settingsMenu="matMenu">
-								  <button mat-menu-item>Shut down</button>
-								  <button mat-menu-item>Restart</button>
-								  <button mat-menu-item>Hibernate</button>
-								</mat-menu> 
-								</div>-->
+								<!-- outputs -->
+								<div class="port-container output">
+									<div class="port"
+										[class.connected]="port.isConnected()" 
+										*ngFor="let port of node.getOutputs(); let po=index"
+										id="n{{node_index}}po{{po}}"
+										draggable=true
+										(dragstart)="portDragStart($event, port, [node_index, po])" 
+										(drag)="portDragging($event, port)" 
+										(dragend)="portDragEnd($event, port)"
+										(drop)="portDrop($event, port, [node_index, po])">
+									</div>
+									<!-- <div class="btn-sm output" ></div> -->
+								</div>
 							</div>
 					
-							<!-- outputs -->
-							<div class="port-container output">
-								<div class="port"
-									[class.connected]="port.isConnected()" 
-									*ngFor="let port of node.getOutputs(); let po=index"
-									id="n{{node_index}}po{{po}}"
-									draggable=true
-									(dragstart)="portDragStart($event, port, [node_index, po])" 
-									(drag)="portDragging($event, port)" 
-									(dragend)="portDragEnd($event, port)"
-									(drop)="portDrop($event, port, [node_index, po])">
-								</div>
-								<!-- <div class="btn-sm output" ></div> -->
-							</div>
 						</div>
-				
+					
 					</div>
-				
 				</div>
+			
+		        <!-- buttons -->
+	           	<button id="addNode" mat-fab color="primary" (click)="addNode($event)">
+	           		<mat-icon>add</mat-icon>
+	           	</button>
 
-				<div class="btn-group">
-	                <button class="btn" (click)="addNode($event)"><i class="fa fa-plus"></i></button>
-					<button class="btn" (click)="executeFlowchart($event)"><i class="fa fa-play-circle"></i></button>
-					<div style="height: 2px; width: 45px; background-color: gray;"></div>
-					<div class="btn" style="font-size: 12px;"
-						*ngFor="let n of _savedNodes; let i=index"
-					    (click)="addNode($event, i)">
+				<button id="libToggle" mat-mini-fab color="secondary" (click)="showLibrary = !showLibrary">
+	           		<mat-icon>my_library_books</mat-icon>
+	           	</button>
+
+	           	<button id="execute" mat-raised-button color="accent" (click)="executeFlowchart($event)">Execute Flowchart</button>  
+
+            </split-area>
+			
+			<split-area [visible]="showLibrary===true" [size]="10" order="2">
+				<div class="library">
+					<div class="lib-node"							*ngFor="let n of _savedNodes; let i=index"
+				    	(click)="addNode($event, i)">
 						{{n._name}}
 					</div>
-	           	</div>
+				</div>
+			</split-area>
 
-	           
-			</div>
+		</split>
+
 	</div>
 </div>
 <!-- </mat-expansion-panel> -->
