--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,35 @@
 <div id="app-container">
 
-  <app-menu></app-menu>
+  <!-- <app-menu></app-menu> -->
+  <button id="setting" mat-button color="secondary" 
+    (click)="showMenu = !showMenu">
+    <mat-icon>settings</mat-icon>
+  </button>
 
   <div class="container">
 
     <div class="wrapper">
       <split  direction="horizontal" 
               [gutterSize]="7" 
-              [useTransition]="action.useTransition"
-              (dragEnd)="action.a1s=$event.sizes[0]; action.a2s=$event.sizes[1]; 
+              [useTransition]="true"
+              (dragEnd)="action.a1s=$event.sizes[0]; 
+              action.a2s=$event.sizes[1]; 
               action.a3s=$event.sizes[2];">
           
             <split-area [visible]="action.a1v" [size]="action.a1s" order="1">
                 <app-viewer-container></app-viewer-container>        
             </split-area>
 
-            <split-area [visible]="action.a3v" [size]="action.a3s" order="2">
+            <split-area [visible]="action.a3v" [size]="action.a2s" order="2">
                 <app-flowchart-viewer class="view-wrapper"></app-flowchart-viewer>
             </split-area>
 
-            <split-area [visible]="action.a2v" [size]="action.a2s" order="3">
+            <split-area [visible]="action.a2v" [size]="action.a3s" order="3">
                 <app-editor></app-editor> 
             </split-area>
             
       </split>
+
     </div>
 
   </div>
