--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -12,7 +12,6 @@
 
 	display: flex;
 	flex-direction: column;
-
 	background: url('../../../../assets/img/fw-ng.png');
 
 	.container{
@@ -33,18 +32,37 @@
 			height: 100%;
 
 			display: flex; 
-			flex-direction: row; 
-			flex-wrap: wrap;
+			flex-direction: column; 
 
-			.lib-node{
-				display: inline-block;
-				border: 2px solid gray; 
-				font-size: 12px; 
-				line-height: 14px; 
-				border-radius: 4px;
-				padding: 5px; 
-				margin: 5px; 
-				height: auto;
+			padding: 15px; 
+			background-color: #D9D9D9;
+
+			h3{
+				font-size: 18px;
+				line-height: 24px;
+				text-align: center;
+				display: block;
+				width: 100%;
+			}
+
+			.lib-node-container{
+
+				display: flex; 
+				flex-direction: row; 
+				flex-wrap: wrap;
+
+				.lib-node{
+					display: inline-block;
+					border: 2px solid gray; 
+					font-size: 12px; 
+					line-height: 14px; 
+					border-radius: 4px;
+					padding: 5px; 
+					margin: 5px; 
+					height: auto;
+					background: white;
+				}
+				
 			}
 		}
 		
@@ -105,22 +123,22 @@
 
 			.btn-container{
 			   position: absolute;
-			   right: -45px;
+			   right: -15px;
 
 			   display: flex; 
 			   flex-direction: column; 
 			   justify-content: space-between;
 
-				width: 45px;
-				height: 110px;
+				height: 60px + 20px + 20px;
 
 			   .btn-group{
 			   		position: relative;
 			   		display: flex; 
 			   		flex-direction: column;
+			   		justify-content: center;
 			   	    
 					background: none;
-
+					
 					.action-button{
 						position: relative;
 						width: 25px;
@@ -132,11 +150,12 @@
 						.material-icons{
 							font-size: 18px;
 							line-height: 24px;
+							color: gray;
 						}
 
 						&:hover{
 							background-color: gray;
-							color: black;
+							color: white;
 						}
 					}
 			   }
