--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div id="app-container">
 
   <!-- <app-menu></app-menu> -->
-  <button id="setting" mat-button color="secondary" 
-    (click)="showMenu = !showMenu">
-    <mat-icon>settings</mat-icon>
-  </button>
+ <!--  <button id="setting" mat-button color="secondary" 
+   (click)="showMenu = !showMenu">
+   <mat-icon>settings</mat-icon>
+ </button> -->
 
   <div class="container">
 
