--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -9,7 +9,7 @@
 	  </mat-form-field>
 	</form>
 
-	<mat-tab-group class="tabs">
+	<mat-tab-group class="tabs" md-stretch-tabs="yes">
 
 	  <mat-tab class="tab-container" label="Parameters">
 	  		<app-parameter-viewer class="row"></app-parameter-viewer>
