--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -6,7 +6,7 @@
               [gutterSize]="7" 
               [useTransition]="true">
           
-            <split-area [visible]="true" [size]="75" order="1">
+            <split-area [visible]="true" [size]="60" order="2">
 
 
 				<div class="btn-group">
@@ -137,11 +137,11 @@
 
             </split-area>
 
-            <split-area [visible]="_showToolbox" [size]="25" order="2">
+            <split-area [visible]="_showToolbox" [size]="100" order="1">
                	
                	<div class="toolbox">
                		<mat-list condensed>
-					 	<mat-list-item *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn); _showToolbox=false;"> 
+					 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn); _showToolbox=false;"> 
 					 	{{ fn.module }}::{{ fn.name }} 
 					 	</mat-list-item>
 					</mat-list>
