--- a/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.scss
+++ b/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.scss
@@ -2,5 +2,23 @@
 
 .viewer{
 	@extend .viewer;
-	overflow: auto;
+
+	height: 100%;
+	width: 100%; 
+
+	.container{
+		height: 100%; 
+		width: 100%;
+
+		#app-geometry-viewer{
+			height: 100%; 
+			width: 100%;
+
+			canvas{
+				height: 100% !important; 
+				width: 100% !important;
+			}
+		}
+
+	}
 }
