--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,14 @@ body{
 split-area{
 	overflow: hidden !important;
 }
+
+
+.mat-tab-label{
+	font-size: 12px !important; 
+	line-height: 18px;
+	min-height: 30px !important; 
+	min-width: 100px !important;
+	padding: 0px; 
+	height: 30px !important;
+	padding: 0 10px; 
+}
