--- a/src/app/ui-components/layout/panel/panel.component.scss
+++ b/src/app/ui-components/layout/panel/panel.component.scss
@@ -3,4 +3,12 @@
 	flex-direction: row; 
 	justify-content: space-between;
 	border: 1px solid gray;
+	background-color: #828282;
+	color: white; 
+	font-weight: bold;
+	height: 30px; 
+	line-height: 30px; 
+	font-size: 14px; 
+	padding: 0px 10px;
 }
+
