--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -1,3 +1,7 @@
-<p>
-  modulebox works!
-</p>
+<div class="toolbox">
+	<mat-list condensed>
+	 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn);"> 
+	 	{{ fn.module }}::{{ fn.name }} 
+	 	</mat-list-item>
+	</mat-list>
+</div>
