--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -1,28 +1,34 @@
-<div class="editor" *ngIf="_selectedNode !== undefined">
-
-	<button mat-button color="primary" (click)="close()">Close Editor</button>
-
-	<form class="node-header">
-	  <mat-form-field class="full-width">
-	    <input  matInput placeholder="Node Name" value="{{_selectedNode.getName()}}"
-	    (change)="updateNodeName($event, _selectedNode)">
-	  </mat-form-field>
-	</form>
-
-	<mat-tab-group class="tabs" md-stretch-tabs="yes">
-
-	  <mat-tab class="tab-container" label="Parameters">
-	  		<app-parameter-viewer class="row"></app-parameter-viewer>
-	  </mat-tab>
-
-	  <mat-tab class="tab-container" label="Input/Output">
-			<app-parameter-editor class="row"></app-parameter-editor>
-	  </mat-tab>
-
-	  <mat-tab class="tab-container" label="Procedure">
-	  		<app-procedure-editor></app-procedure-editor>
-	  </mat-tab>
-	</mat-tab-group>
-
+<div class="editor">
 	
+	<div class="default" *ngIf="_selectedNode == undefined">
+		No Node Selected
+	</div>
+
+	<split  *ngIf="_selectedNode != undefined"
+			  direction="horizontal" 
+              [gutterSize]="7" 
+              [useTransition]="true">
+
+		<split-area [visible]="true" [size]="30" order="1">
+			<app-modulebox></app-modulebox>
+		</split-area>
+
+		<split-area [visible]="true" [size]="70" order="2">
+			
+		 	<app-parameter-editor></app-parameter-editor>
+			<app-procedure-editor></app-procedure-editor>
+		</split-area>
+
+    </split>
+
+	<!-- default message when no node selected -->
+	
+		<!-- <form class="node-header">
+		  <mat-form-field class="full-width">
+		    <input  matInput placeholder="Node Name" value="{{_selectedNode.getName()}}"
+		    (change)="updateNodeName($event, _selectedNode)">
+		  </mat-form-field>
+		</form> -->
+
 </div>
+
