--- a/src/app/ui-components/editors/editor/editor.component.scss
+++ b/src/app/ui-components/editors/editor/editor.component.scss
@@ -5,8 +5,8 @@
 	display: flex; 
 	flex-direction: column;
 
-	height: 98%;
-	overflow: hidden;
+	height: 100%;
+	overflow: auto;
 
 	.node-header{
 		padding: 15px 0px 15px 0px;
@@ -30,6 +30,5 @@
 	.full-width{
 		width: 100%;
 	}
-
 
 }
