--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -1,28 +1,25 @@
 <div class="viewer">
-
-	<div class="container">
-
-		<split  direction="horizontal" 
-              [gutterSize]="7" 
-              [useTransition]="true">
-          
-            <split-area [visible]="true" [size]="60" order="2">
-
-
-				<div class="btn-group">
-					<button mat-raised-button *ngFor="let type of procedureTypes"
-			 		(click)="addProcedure($event, type)">
-			 			{{getImageForType(type)}}
-			 		</button>
-				</div>
-
-    			
-    			<div class="tree">          
+	<mat-accordion  [displayMode]="flat">
+		<mat-expansion-panel [expanded]="true">
+					<mat-expansion-panel-header>
+						<mat-panel-title>
+						  Procedure 
+						</mat-panel-title>
+						<mat-panel-description>
+						  <!-- This is a summary of the content -->
+						</mat-panel-description>
+					</mat-expansion-panel-header>
 					
-					<div class="default" *ngIf='_tree==undefined || _tree.length == 0'> This node has no procedure </div>
+					<div class="btn-group">
+						<button mat-raised-button *ngFor="let type of procedureTypes"
+							 		(click)="addProcedure($event, type)">
+							 			{{getImageForType(type)}}
+						</button>
+					</div>
 
 
-	                <tree-root #tree [nodes]='_tree' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
+					<div class="tree">       
+						<tree-root #tree [nodes]='_tree' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
 						  
 						  <ng-template #treeNodeTemplate let-prod let-index="index" class="tree-node-wrapper">
 
@@ -130,29 +127,8 @@
 		    					</div>
 
 						  </ng-template>
-					</tree-root>     
-
-				</div>
-
-
-
-            </split-area>
-
-            <split-area [visible]="_showToolbox" [size]="100" order="1">
-               	
-               	<div class="toolbox">
-               		<mat-list condensed>
-					 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn); _showToolbox=false;"> 
-					 	{{ fn.module }}::{{ fn.name }} 
-					 	</mat-list-item>
-					</mat-list>
-				</div>
-
-				<button mat-raised-button (click)="_showToolbox=false;">Close</button>
-            </split-area>
-            
-      </split>
-
-	</div>
-
+						</tree-root> 
+					</div>
+		</mat-expansion-panel>
+	</mat-accordion>
 </div>
