--- a/src/app/ui-components/viewers/node-library/node-library.component.html
+++ b/src/app/ui-components/viewers/node-library/node-library.component.html
@@ -1,17 +1,10 @@
-<div class="library">
-					
-	<h3>Saved Nodes</h3>
-	
-	<div class="lib-node-container">
-		<div class="lib-node"							
-			*ngFor="let n of _savedNodes; let i=index"
-	    	(click)="addNode($event, i)">
-			{{n._name}}
-		</div>
-	</div>
+<div class="node" *ngFor="let n of _savedNodes; let i=index"
+	(click)="addNode($event, i)">
+	{{n._name}}
+</div>
 
-	<button mat-button (click)="clearLibrary()">
-		Clear Library
-	</button>
+<br><br><br>
 
-	</div>
+<div (click)="clearLibrary()">
+	Clear Library
+</div>
