--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
@@ -30,12 +30,15 @@
 					</mat-form-field>
 				</form>
 			</div>
+
 			
 			<!-- todo: disable if port is connected -->
 			<!-- ui options based on type -->
 			<!-- todo: -->
 		</div>
 
+
+		<button id="execute" mat-raised-button color="accent" (click)="executeFlowchart($event)">Execute Flowchart</button>  
 	</div>
 
 </div>
